# Hands-on-Machine-Learning

Projetos-Machine-Learning/: pyproject.toml
Projetos-Machine-Learning/Matplotlib/: 1.graficos_dispercao.ipynb  2.graficos_barra.ipynb  3.histogramas_p_encontrar_frequencias.ipynb  4.graficos_linha.ipynb  5.pandas_e_matplotlib.ipynb  6.apresentacao_graficos.ipynb
Projetos-Machine-Learning/Numpy/: 1.ndarrays.ipynb  2.slice_e_step.ipynb  3.metodos_sum_e_mean.ipynb  4.reshape.ipynb  5.concatenate.ipynb
Projetos-Machine-Learning/Pandas/: 1.series.ipynb  2.operacoes_matematicas.ipynb  3.valores_nulos_ou_vazios.ipynb  4.dataframes.ipynb  5.explorando_dados_dataframe.ipynb  6.renomeando_linhas_colunas.ipynb  7.selecionando_linhas_e_colunas.ipynb  8.atualizando_valores_dataframe.ipynb
Scikit-Learn-Precos-Pizzas/: app.py  pyproject.toml  testes.ipynb
