[project]
name = "projeto-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
